# marvin

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  backend.Dockerfile  docker-compose.yml
marvin_backend/: Cargo.toml
marvin_core/: Cargo.toml
marvin_core/src/: lib.rs
marvin_postgres/: Cargo.toml
marvin_postgres/examples/: create_package.rs  show_packages.rs
marvin_postgres/migrations/2018-02-11-171921_initial/: down.sql  up.sql
marvin_postgres/src/: lib.rs  models.rs  schema.rs
marvin_server/: Cargo.toml
marvin_server/src/: main.rs
migrations/2018-02-11-171921_initial/: down.sql  up.sql
ros_parser/: Cargo.toml
ros_parser/src/: lib.rs
src/: importer.rs  lib.rs  models.rs  repository.rs  schema.rs
src/handlers/: db_guard.rs  mod.rs
src/package/: mod.rs
src/util/: errors.rs  mod.rs
src/views/: mod.rs
