[package]
name = "marvin_postgres"
version = "0.1.0"
authors = ["Michael Johnson <mjohnson459@gmail.com>"]
edition = "2018"

[dependencies]
marvin_backend = { path = "../marvin_backend" }

chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.3.3", features = ["postgres", "serde_json", "chrono"] }
diesel_full_text_search = "1.0.1"
dotenv = "0.13.0"
semver = "0.9.0"

[build-dependencies]
diesel = { version = "1.3.3", features = ["postgres"] }
diesel_migrations = { version = "1.3.0", features = ["postgres"] }
dotenv = "0.13.0"
